--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header id="header desktkop">    <!-- Header start-->
         <nav id="navbar">
             <ul id="navlist">
-                <li class="page-link" id="homepage"><a href="/index.html" id="index">Home</a></li>
+                <li class="page-link" id="homepage"><a href="index.html" id="index">Home</a></li>
                 <li class="page-link" id="career academic page"><a href="./navegation/career-academic.html" id="education">Education and Career</a></li>
                 <li class="page-link" id="portoflio page"><a href="./navegation/portfolio.html" id="portfolio">Portfolio</a></li>
                 <li class="page-link" id="contact page"><a href="./navegation/contact.html" id="contact">Contact me</a></li>
