anothe attempt to fix the navegation and style errors

--- a/navegation/portfolio.html
+++ b/navegation/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/portfolio-style.css">
+    <link rel="stylesheet" href="./css/portfolio-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <header id="header desktkop">    <!-- Header start-->
         <nav id="navbar">
             <ul id="navlist">
-                <li class="page-link" id="homepage"><a href="index.html" id="index">Home</a></li>
+                <li class="page-link" id="homepage"><a href="./index.html" id="index">Home</a></li>
                 <li class="page-link" id="career academic page"><a href="./career-academic.html" id="education">Education and Career</a></li>
                 <li class="page-link" id="portoflio page"><a href="./portfolio.html" id="portfolio">Portfolio</a></li>
                 <li class="page-link" id="contact page"><a href="./contact.html" id="contact">Contact me</a></li>
